# llm-finetuning

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements-dev.txt  tarefa.md
benchmarks/: README.md  diarios_qa.jsonl  sample_corpus.jsonl
configs/: distill_diarios_gpt2.yaml  distill_diarios_response.yaml  distill_logitkd_qwen3_0p6b.yaml  eval_baseline.yaml  eval_diarios_antes.yaml  eval_diarios_depois.yaml  eval_diarios_heldout_antes.yaml  eval_diarios_heldout_balanced.yaml  eval_diarios_heldout_depois.yaml  eval_diarios_heldout_full_antes.yaml  eval_diarios_heldout_full_depois.yaml  example.yaml  lora_docentes_gemma3_1b.yaml  lora_docentes_gpt2.yaml  lora_docentes_gpt2_large.yaml  lora_docentes_gpt2_medium.yaml  lora_docentes_qwen3_0p6b.yaml  lora_docentes_qwen3_1p7b.yaml  pretrain_diarios.yaml  pretrain_diarios_gemma3_1b.yaml  pretrain_diarios_gemma3_1b_full.yaml  pretrain_diarios_gemma3_1b_it.yaml  pretrain_diarios_gemma3_1b_it_full.yaml  pretrain_diarios_gpt2.yaml  pretrain_diarios_gpt2_large.yaml  pretrain_diarios_gpt2_medium.yaml  pretrain_diarios_qwen2p5_0p5b_full.yaml  pretrain_diarios_qwen2p5_0p5b_it_full.yaml  pretrain_diarios_qwen2p5_1p5b_full.yaml  pretrain_diarios_qwen2p5_1p5b_it_full.yaml  pretrain_diarios_qwen2p5_3b_full.yaml  pretrain_diarios_qwen2p5_3b_it_full.yaml  pretrain_diarios_qwen3_0p6b.yaml  pretrain_diarios_qwen3_0p6b_balanced.yaml  pretrain_diarios_qwen3_0p6b_full.yaml  pretrain_diarios_qwen3_0p6b_it_full.yaml  pretrain_diarios_qwen3_1p7b.yaml  pretrain_diarios_qwen3_1p7b_full.yaml  pretrain_diarios_qwen3_1p7b_it_full.yaml  pretrain_diarios_qwen3_4b.yaml  (+17 more)
docs/: ANALISE_COMPLETA.md  DATASET_BALANCEAMENTO.md  GUIA_ARTIGO.md  GUIA_BENCHMARK.md  GUIA_GUARDRAILS.md  IMPLEMENTACAO_QUESTOES.md  PERGUNTAS.md  POLITICA_SEGURANCA.md  PROMPTS.md  RAG_ROADMAP.md
notebooks/: graficos_resultados.ipynb
results/: README.md  benchmark_rag_analysis.csv  benchmark_rag_balanced_compare_gemma1b_pt.csv  benchmark_rag_compare_gemma1b_it.csv  benchmark_rag_compare_gemma1b_pt.csv  benchmark_rag_gemma1b_it.csv  q1_balanceamento_licitacao.csv  q1_base_vs_instruct.csv  q1_forgetting.csv  q2_sft.csv  q2_sft_eval_0p6b_recall.csv  q2_sft_eval_0p6b_recall_details.jsonl  q2_sft_eval_1p7b_recall_details.jsonl  q2_sft_eval_gemma1b_recall.csv  q2_sft_eval_gemma1b_recall_details.jsonl  q2_sft_eval_gpt2_recall_details.jsonl  q3_lora.csv  q3_lora_gemma_recall.csv  q3_lora_gemma_recall_details.jsonl  q3_lora_gpt2_recall_details.jsonl  q3_lora_recall.csv  q3_lora_recall_details.jsonl  q4_distill.csv  q4_distill_gpt2_recall.csv  q4_distill_recall.csv  q4_distill_recall_details.jsonl  q4_teacher_t27b_recall.csv  q4_teacher_t27b_recall_details.jsonl  q4_teacher_t30b_recall_details.jsonl  q4_teacher_t31b_recall.csv  q4_teacher_t31b_recall_details.jsonl  q4_teacher_t8b_recall.csv  q4_teacher_t8b_recall_details.jsonl  q5_engines.csv  q5_qualitativos.md  q5_rag_30b.csv  q5_student_gemma-1b-distill.csv  q5_student_qwen3-0.6b-distill.csv  q5_student_smollm2-135m-distill.csv  q6_adversarial.csv  (+8 more)
scripts/: _build_results_notebook.py  build_balanced_corpus.py  build_rag_index.py  build_sft_pairs.py  build_sft_pairs_anchored.py  csv_to_jsonl.py  diarios_to_text.py  docentes_to_text.py  (+18 more)
(+184 files in other folders)
